--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/three": "^0.156.0",
     "buffer": "^5.5.0||^6.0.0",
     "parcel": "^2.9.3",
