--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "esModuleInterop": true,
       "moduleResolution": "node",
       "skipLibCheck": true,
-      "lib": ["dom", "es2019"]
+      "lib": ["dom", "es2019"],
+      "baseUrl": "src"
     },
     "include": ["src"]
   }
